--- a/project/stm32node/stm32node.ioc
+++ b/project/stm32node/stm32node.ioc
@@ -5,10 +5,44 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
 ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+Dma.Request0=SDIO_RX
+Dma.Request1=SDIO_TX
+Dma.RequestsNb=2
+Dma.SDIO_RX.0.Direction=DMA_PERIPH_TO_MEMORY
+Dma.SDIO_RX.0.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_RX.0.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_RX.0.Instance=DMA2_Stream3
+Dma.SDIO_RX.0.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_RX.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_RX.0.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_RX.0.Mode=DMA_PFCTRL
+Dma.SDIO_RX.0.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_RX.0.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_RX.0.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_RX.0.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SDIO_RX.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
+Dma.SDIO_TX.1.Direction=DMA_MEMORY_TO_PERIPH
+Dma.SDIO_TX.1.FIFOMode=DMA_FIFOMODE_ENABLE
+Dma.SDIO_TX.1.FIFOThreshold=DMA_FIFO_THRESHOLD_FULL
+Dma.SDIO_TX.1.Instance=DMA2_Stream6
+Dma.SDIO_TX.1.MemBurst=DMA_MBURST_INC4
+Dma.SDIO_TX.1.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.SDIO_TX.1.MemInc=DMA_MINC_ENABLE
+Dma.SDIO_TX.1.Mode=DMA_PFCTRL
+Dma.SDIO_TX.1.PeriphBurst=DMA_PBURST_INC4
+Dma.SDIO_TX.1.PeriphDataAlignment=DMA_PDATAALIGN_WORD
+Dma.SDIO_TX.1.PeriphInc=DMA_PINC_DISABLE
+Dma.SDIO_TX.1.Priority=DMA_PRIORITY_VERY_HIGH
+Dma.SDIO_TX.1.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority,FIFOMode,FIFOThreshold,MemBurst,PeriphBurst
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=ETH_MEDIA_INTERFACE_MII
-FREERTOS.IPParameters=Tasks01
-FREERTOS.Tasks01=defaultTask,0,128,StartDefaultTask,Default,NULL
+FATFS.IPParameters=_VOLUMES,_MULTI_PARTITION,_FS_RPATH
+FATFS._FS_RPATH=1
+FATFS._MULTI_PARTITION=1
+FATFS._VOLUMES=2
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=defaultTask,0,2048,StartDefaultTask,Default,NULL,Dynamic,NULL,NULL
 File.Version=6
 I2S2.ErrorAudioFreq=1.72 %
 I2S2.FullDuplexMode=I2S_FULLDUPLEXMODE_ENABLE
@@ -21,25 +55,26 @@ LWIP.Version=v2.0.3_Cube
 Mcu.Family=STM32F4
 Mcu.IP0=ADC1
 Mcu.IP1=DAC
-Mcu.IP10=RCC
-Mcu.IP11=RTC
-Mcu.IP12=SDIO
-Mcu.IP13=SPI1
-Mcu.IP14=SYS
-Mcu.IP15=USART1
-Mcu.IP16=USART2
-Mcu.IP17=USART3
-Mcu.IP18=USB_DEVICE
-Mcu.IP19=USB_OTG_FS
-Mcu.IP2=ETH
-Mcu.IP3=FATFS
-Mcu.IP4=FREERTOS
-Mcu.IP5=I2C1
-Mcu.IP6=I2S2
-Mcu.IP7=LWIP
-Mcu.IP8=MBEDTLS
-Mcu.IP9=NVIC
-Mcu.IPNb=20
+Mcu.IP10=NVIC
+Mcu.IP11=RCC
+Mcu.IP12=RTC
+Mcu.IP13=SDIO
+Mcu.IP14=SPI1
+Mcu.IP15=SYS
+Mcu.IP16=USART1
+Mcu.IP17=USART2
+Mcu.IP18=USART3
+Mcu.IP19=USB_DEVICE
+Mcu.IP2=DMA
+Mcu.IP20=USB_OTG_FS
+Mcu.IP3=ETH
+Mcu.IP4=FATFS
+Mcu.IP5=FREERTOS
+Mcu.IP6=I2C1
+Mcu.IP7=I2S2
+Mcu.IP8=LWIP
+Mcu.IP9=MBEDTLS
+Mcu.IPNb=21
 Mcu.Name=STM32F407V(E-G)Tx
 Mcu.Package=LQFP100
 Mcu.Pin0=PE2
@@ -106,6 +141,8 @@ Mcu.UserName=STM32F407VETx
 MxCube.Version=4.24.0
 MxDb.Version=DB.4.0.240
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.DMA2_Stream3_IRQn=true\:6\:0\:true\:false\:true\:true\:false
+NVIC.DMA2_Stream6_IRQn=true\:6\:0\:true\:false\:true\:true\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.ETH_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -114,6 +151,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.OTG_FS_IRQn=true\:5\:0\:false\:false\:true\:true\:false
 NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
+NVIC.SDIO_IRQn=true\:5\:0\:false\:false\:true\:true\:true
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false
 NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:true\:true\:false
 NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:false\:false
@@ -230,7 +268,7 @@ ProjectManager.BackupPrevious=false
 ProjectManager.CompilerOptimize=2
 ProjectManager.ComputerToolchain=false
 ProjectManager.CoupleFile=false
-ProjectManager.CustomerFirmwarePackage=C\:/Users/Eleree/STM32Cube/Repository/STM32Cube_FW_F4_V1.19.0
+ProjectManager.CustomerFirmwarePackage=C\:/Users/Tesla/STM32Cube/Repository/STM32Cube_FW_F4_V1.19.0
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
 ProjectManager.DeviceId=STM32F407VETx
@@ -245,11 +283,11 @@ ProjectManager.PreviousToolchain=
 ProjectManager.ProjectBuild=false
 ProjectManager.ProjectFileName=stm32node.ioc
 ProjectManager.ProjectName=stm32node
-ProjectManager.StackSize=0x400
+ProjectManager.StackSize=0xA000
 ProjectManager.TargetToolchain=MDK-ARM V5
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-true,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_DAC_Init-DAC-false-HAL-true,5-MX_I2C1_Init-I2C1-false-HAL-true,6-MX_I2S2_Init-I2S2-false-HAL-true,7-MX_RTC_Init-RTC-false-HAL-true,8-MX_SDIO_SD_Init-SDIO-false-HAL-true,9-MX_SPI1_Init-SPI1-false-HAL-true,10-MX_USART1_UART_Init-USART1-false-HAL-true,11-MX_USART2_UART_Init-USART2-false-HAL-true,12-MX_USART3_UART_Init-USART3-false-HAL-true,13-MX_FATFS_Init-FATFS-false-HAL-true,14-MX_LWIP_Init-LWIP-false-HAL-true,15-MX_MBEDTLS_Init-MBEDTLS-false-HAL-true,16-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-true,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_DAC_Init-DAC-false-HAL-true,6-MX_I2C1_Init-I2C1-false-HAL-true,7-MX_I2S2_Init-I2S2-false-HAL-true,8-MX_RTC_Init-RTC-false-HAL-true,9-MX_SDIO_SD_Init-SDIO-false-HAL-true,10-MX_SPI1_Init-SPI1-false-HAL-true,11-MX_USART1_UART_Init-USART1-false-HAL-true,12-MX_USART2_UART_Init-USART2-false-HAL-true,13-MX_USART3_UART_Init-USART3-false-HAL-true,14-MX_FATFS_Init-FATFS-false-HAL-true,15-MX_LWIP_Init-LWIP-false-HAL-true,16-MX_MBEDTLS_Init-MBEDTLS-false-HAL-true,17-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-true
 RCC.48MHZClocksFreq_Value=48000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
